# tiny-scripts

./: .gitignore  README.md
konkur-study/: score-calc.py
konkur-study/exam-assist/: exam-assist.py
konkur-study/test-list-gen/: test-list-gen.py
pdf-files/: pages-counter.py  pdf-import-range.py  pdf-merger.py  pdf-outline.py  pdf-spliter.py
scripts/: decode-interpreter.py  score-calc-helper.py
telegram/: files-downloader.py
telegram/files-downloader/: .env-sample  files-downloader.py  pyproject.toml
